--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -98,7 +98,7 @@
         "ti": "Tigriña",
         "tr": "Turco",
         "uk": "Ucranio",
-        "ab": "",
+        "ab": "Abjasio",
         "ar": "Arabe",
         "en": "Inglés",
         "es": "Español",
@@ -156,7 +156,174 @@
         "selectTimezone": "Seleccionar zona horaria",
         "chooseTime": "Elige una hora",
         "linkSent": "Invitación enviada",
-        "aa": "",
+        "aa": "Afar",
+        "ae": "Avéstico",
+        "af": "Afrikáans",
+        "ak": "Akan",
+        "am": "Amárico",
+        "an": "Aragonés",
+        "as": "Asamés",
+        "av": "Ávaro",
+        "ay": "Aimara",
+        "az": "Azerí",
+        "ba": "Baskir",
+        "be": "Bielorruso",
+        "bg": "Búlgaro",
+        "bh": "Biharí",
+        "bi": "Bislama",
+        "bm": "Bambara",
+        "bn": "Bengalí",
+        "bo": "Tibetano",
+        "br": "Bretón",
+        "bs": "Bosnio",
+        "ca": "Catalán",
+        "ce": "Checheno",
+        "ch": "Chamorro",
+        "co": "Corso",
+        "cr": "Cree",
+        "cs": "Checo",
+        "cu": "Eslavo eclesiástico antiguo",
+        "cv": "Chuvasio",
+        "cy": "Galés",
+        "da": "Danés",
+        "dv": "Divehi",
+        "dz": "Dzongkha",
+        "ee": "Ewe",
+        "el": "Griego",
+        "eo": "Esperanto",
+        "et": "Estonio",
+        "eu": "Vasco",
+        "ff": "Fula",
+        "fi": "Finlandés",
+        "fj": "Fiyiano",
+        "fo": "Feroés",
+        "fy": "Frisón occidental",
+        "ga": "Irlandés",
+        "gd": "Gaélico escocés",
+        "gl": "Gallego",
+        "gn": "Guaraní",
+        "gu": "Guyaratí",
+        "gv": "Manés",
+        "ha": "Hausa",
+        "he": "Hebreo",
+        "hi": "Hindi",
+        "ho": "Hiri Motu",
+        "hr": "Croata",
+        "ht": "Haitiano",
+        "hz": "Herero",
+        "ia": "Interlingua",
+        "id": "Indonesio",
+        "ie": "Interlingue",
+        "ig": "Igbo",
+        "ii": "Yi de Sichuán",
+        "ik": "Inupiaq",
+        "io": "Ido",
+        "is": "Islandés",
+        "iu": "Inuktitut",
+        "ja": "Japonés",
+        "jv": "Javanés",
+        "ka": "Georgiano",
+        "kg": "Kongo",
+        "ki": "Kikuyu",
+        "kj": "Kuanyama",
+        "kk": "Kazajo",
+        "kl": "Groenlandés",
+        "km": "Jemer",
+        "kn": "Canarés",
+        "ko": "Coreano",
+        "kr": "Kanuri",
+        "ks": "Cachemir",
+        "ku": "Kurdo",
+        "kv": "Komi",
+        "kw": "Córnico",
+        "ky": "Kirguís",
+        "la": "Latín",
+        "lb": "Luxemburgués",
+        "lg": "Ganda",
+        "li": "Limburgués",
+        "ln": "Lingala",
+        "lo": "Lao",
+        "lt": "Lituano",
+        "lu": "Luba",
+        "lv": "Letón",
+        "mg": "Malgache",
+        "mh": "Marshalés",
+        "mi": "Maorí",
+        "mk": "Macedonio",
+        "ml": "Malabar",
+        "mn": "Mongol",
+        "mo": "Moldavo",
+        "mr": "Maratí",
+        "ms": "Malayo",
+        "mt": "Maltés",
+        "my": "Birmano",
+        "na": "Nauruano",
+        "nb": "Noruego bokmål",
+        "nd": "Ndebele del norte",
+        "ne": "Nepalí",
+        "ng": "Ndonga",
+        "nl": "Neerlandés",
+        "nn": "Noruego nynorsk",
+        "no": "Noruego",
+        "nr": "Ndebele del sur",
+        "nv": "Navajo",
+        "ny": "Chichewa",
+        "oc": "Occitano",
+        "oj": "Ojibwa",
+        "om": "Oromo",
+        "or": "Oriya",
+        "os": "Osetio",
+        "pa": "Panyabí",
+        "pi": "Pali",
+        "ps": "Pastún",
+        "qu": "Quechua",
+        "rm": "Romanche",
+        "rn": "Kirundi",
+        "ro": "Rumano",
+        "rw": "Kinyarwanda",
+        "sa": "Sánscrito",
+        "sc": "Sardo",
+        "sd": "Sindhi",
+        "se": "Sami del norte",
+        "sg": "Sango",
+        "sh": "Serbocroata",
+        "si": "Cingalés",
+        "sk": "Eslovaco",
+        "sl": "Esloveno",
+        "sm": "Samoano",
+        "sn": "Shona",
+        "so": "Somalí",
+        "sq": "Albanés",
+        "sr": "Serbio",
+        "ss": "Suazi",
+        "st": "Sesoto",
+        "su": "Sundanés",
+        "sv": "Sueco",
+        "sw": "Suajili",
+        "te": "Telugu",
+        "tg": "Tayiko",
+        "tk": "Turcomano",
+        "tl": "Tagalo",
+        "tn": "Setsuana",
+        "to": "Tongano",
+        "ts": "Tsonga",
+        "tt": "Tártaro",
+        "tw": "Twi",
+        "ty": "Tahitiano",
+        "ug": "Uigur",
+        "ur": "Urdu",
+        "uz": "Uzbeko",
+        "ve": "Venda",
+        "vi": "Vietnamita",
+        "vo": "Volapük",
+        "wa": "Valón",
+        "wo": "Wolof",
+        "xh": "Xhosa",
+        "yi": "Yidis",
+        "yo": "Yoruba",
+        "za": "Zhuang",
+        "zh": "Chino",
+        "zu": "Zulú",
         "cantUpdateAcceptedInvite": "No se puede editar la invitación si ya ha sido aceptada por un paciente, traductor o invitado.",
         "patientTeleConsultationDescription": "Envíe un enlace de invitación a un paciente para realizar una teleconsulta. También puede enviar una invitación a un intérprete, familiar u otro cuidador",
         "lastNameIsRequired": "El apellido es <strong>obligatorio</strong>",
@@ -432,7 +599,8 @@
         "endDateTime": "Fecha/hora de finalización",
         "duration": "Duración",
         "chatHistory": "Historial de chat",
-        "attachedFile": "[Archivo adjunto]"
+        "attachedFile": "[Archivo adjunto]",
+        "fileName": "informe-de-consulta"
     },
     "error": {
         "defaultTitle": "Error",
@@ -473,7 +641,8 @@
         "send": "Enviar",
         "alreadyStarted": "Esta consulta ya ha sido atendida",
         "invalidUrl": "URL no válida",
-        "tokenExpired": "Token expirado"
+        "tokenExpired": "Token expirado",
+        "goToConsultation": "Ir directamente a la consulta"
     },
     "topNav": {
         "profile": "Perfil",
@@ -489,7 +658,8 @@
     "confirmationDialog": {
         "yesText": "Confirmar",
         "noText": "Cancelar",
-        "confirmationTitle": "¡Confirmación!"
+        "confirmationTitle": "¡Confirmación!",
+        "acceptAndStartConsultation": "¿Aceptar e iniciar la consulta?"
     },
     "selectLanguage": {
         "en": "English",
@@ -497,6 +667,14 @@
         "uk": "Українська",
         "es": "Español",
         "kk": "Қазақ"
+    },
+    "roles": {
+        "admin": "Administrador",
+        "doctor": "Médico",
+        "patient": "Paciente",
+        "nurse": "Solicitante",
+        "requester": "Solicitante",
+        "scheduler": "Programador"
     },
     "metadata": {
         "Age": "Edad",
