--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.66) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.67) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -96,7 +96,16 @@ hcw-athome-caregiver (0.5.66) UNRELEASED; urgency=medium
   * add export pdf button
   * Replace x-access-token header with standard Authorization: Bearer
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 19 Feb 2026 16:28:58 +0000
+  [ Olivier Bitsch ]
+  * Update es lang
+
+  [ Weblate ]
+  * Update translation files
+
+  [ Gor Grigoryan ]
+  * update hcw-stream-lib
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 24 Feb 2026 17:39:10 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
