--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -118,12 +118,12 @@
         "firstNameIsRequired": "El nombre es <strong>obligatorio</strong>",
         "lastName": "Apellido",
         "firstName": "Nombre",
-        "sex": "Género",
+        "sex": "Sexo",
         "male": "Masculino",
         "female": "Femenino",
         "other": "Otro",
         "unknown": "Desconocido",
-        "pleaseChooseTheSex": "Por favor seleccione género",
+        "pleaseChooseTheSex": "Por favor seleccione sexo",
         "waitingQueue": "Fila de espera compartida",
         "mySelf": "Ninguno",
         "pleaseOnlyFillUpAnEmailOrAnMobilePhoneNumberEx": "Por favor introduzca solo correo electrónico o número de teléfono móvil (+41 o +33)",
@@ -591,16 +591,24 @@
         "patientInformation": "Información del paciente",
         "firstname": "Nombre",
         "lastname": "Apellido",
-        "gender": "Género",
+        "gender": "Sexo",
         "requesterInformation": "Información del solicitante",
         "expertInformation": "Información de expertos",
         "consultationInformation": "Información de consulta",
         "startDateTime": "Fecha/hora de inicio",
         "endDateTime": "Fecha/hora de finalización",
         "duration": "Duración",
+        "queue": "Fila",
+        "closedBy": "Cerrada por",
         "chatHistory": "Historial de chat",
         "attachedFile": "[Archivo adjunto]",
-        "fileName": "informe-de-consulta"
+        "fileName": "informe-de-consulta",
+        "metadata": {
+            "age": "Edad",
+            "country": "País",
+            "facilityId": "ID del centro",
+            "fileId": "ID del archivo"
+        }
     },
     "error": {
         "defaultTitle": "Error",
