--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-hcw-athome-caregiver (0.5.66) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.66) focal; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
+  * Update es lang
+  * Fix missing translation and translate metadata
 
   [ Gor Grigoryan ]
   * skip some routes for error interceptor
@@ -96,7 +98,7 @@ hcw-athome-caregiver (0.5.66) UNRELEASED; urgency=medium
   * add export pdf button
   * Replace x-access-token header with standard Authorization: Bearer
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 19 Feb 2026 16:28:58 +0000
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 25 Feb 2026 07:44:43 +0100
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
