--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.5.69) UNRELEASED; urgency=medium
+
+  * improve video room
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 26 Feb 2026 09:28:37 +0000
+
 hcw-athome-caregiver (0.5.68) focal; urgency=medium
 
   [ Olivier Bitsch ]
